...
                                    <navigationItem id="cBK-i8-zi2">
                                        <nil key="title"/>
                                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="gXa-gY-uWV">
                                            <rect key="frame" x="92" y="7.5" width="191" height="29"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <segments>
                                                <segment title="Map"/>
                                                <segment title="Satellite"/>
                                                <segment title="Hybrid"/>
                                            </segments>
                                            <connections>
                                                <action selector="mapTypeChange:" destination="VUD-WZ-4N2" eventType="valueChanged" id="bud-Xg-mh5"/>
                                            </connections>
                                        </segmentedControl>
                                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="s1T-dZ-ZJS">
...
            <objects>
                <viewController id="HkT-uq-bvI" customClass="SyncViewController" customModule="iScout" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="6rb-Ie-vGS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sync" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0fP-Vx-KeE">
                                <rect key="frame" x="0.0" y="40" width="375" height="30"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ypX-PU-EY6">
...
